# kagenti

./: .gitignore  .gitleaks.toml  .lychee.toml  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pylintrc  .trivyignore  AUTO-LABELING-FIX.md  CLAUDE-ORG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LADDER.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  PERSONAS_AND_ROLES.md  README.md  SECURITY.md  SPIFFE_IDP_FIXES.md  TODO_CUSTOM_VISUALIZATIONS.md  TODO_KIALI_VALIDATION.md  exported-weather-service.yaml  exported-weather-tool.yaml  pyproject.toml  trivy.yaml
.claude/: README.md  settings.json
.cves/: SUMMARY.md  cve-scan-results.md  md-audit-results.md  security-review-results.md
.github/: dependabot.yml  spellcheck_action.yml
docs/: DEVELOPING_KINST.md  DOCS-REORGANIZATION-PROPOSAL.md  README-wqw.md  README.md  TODO-mlflow-auth.md  api-authentication.md  authbridge-combined-sidecar.md  blogs.md  cn-demos.md  cn-pocs.md  components.md  demo-file-organizer-agent.md  demo-generic-agent.md  demo-github-issue.md  (+28 more)
examples/clients/acp/: client.py  pyproject.toml
examples/ui/: Home.py  pyproject.toml
examples/ui/lib/: a2a_test.py  a2a_utils.py  acp.py  agent_details_page.py  kube.py  utils.py
examples/ui/pages/: 01_Agent_Catalog.py  02_Tool_Catalog.py  03_Observability.py  04_Import_New_Agent.py  05_Import_New_Tool.py  06_Admin.py
examples/ui/src/: Home.py  pyproject.toml  test.md
examples/ui/src/lib/: a2a_utils.py  acp_utils.py  agent_details_page.py  build_utils.py  common_ui.py  constants.py  kube.py  mcp_client.py  tool_details_page.py  utils.py
examples/ui/src/pages/: 01_Agent_Catalog.py  02_Tool_Catalog.py  03_Observability.py  04_Import_New_Agent.py  05_Import_New_Tool.py  06_Admin.py
kagenti/backend/: .dockerignore  .pylintrc  Dockerfile  README.md  pyproject.toml
kagenti/backend/app/: main.py
kagenti/backend/app/core/: auth.py  config.py  constants.py
kagenti/backend/app/models/: event.py  responses.py  shipwright.py
kagenti/backend/app/routers/: acp.py  agents.py  auth.py  chat.py  config.py  namespaces.py  shipwright.py  skills.py  tools.py
kagenti/backend/app/services/: acp_bridge.py  kubernetes.py  reconciliation.py  session_db.py  shipwright.py  shipwright_builds.py  sidecar_manager.py
kagenti/backend/app/services/openshell/: gateway.py
kagenti/backend/app/services/openshell/v1/: exec_pb2.py  exec_pb2_grpc.py
kagenti/backend/app/services/sidecars/: __init__.py  context_guardian.py  hallucination_observer.py  looper.py
kagenti/backend/app/utils/: __init__.py  routes.py
kagenti/backend/proto/openshell/v1/: exec.proto
kagenti/backend/tests/: test_agent_readiness.py  test_agentruntime_manifest.py  test_auth.py  test_authbridge_runtime_config.py  test_build_cleanup.py  test_config_dashboards_api.py  test_dashboard_config.py  test_env_var_validation.py  test_keycloak_url_config.py  test_kubernetes_service.py  test_mcp_gateway_status.py  test_migration.py  test_null_conditions.py  test_openshell_gateway.py  test_reconciliation.py  test_routes.py  test_sandbox_manifest.py  test_shipwright.py  test_shipwright_builds_api.py  test_shipwright_shared.py  test_shipwright_tools.py  test_skills.py  test_tool_url.py  test_tool_workloads.py
kagenti/installer/: DEPRECATION.md  README.md  keycloak.yaml  main.py  pyproject.toml
kagenti/installer/app/: .env_template  checker.py  cli.py  cluster.py  config.py  ocp_utils.py  utils.py
kagenti/installer/app/components/: __init__.py  addons.py  agent_namespaces.py  agents.py  cert_manager.py  gateway.py  inspector.py  istio.py  keycloak.py  mcp_gateway.py  metrics_server.py  operator.py  otel.py  registry.py  spire.py  tekton.py  toolhive.py  ui.py
kagenti/installer/app/linux/: ollama-config.sh
kagenti/installer/app/resources/: environments.yaml  envoyfilter.yaml  envoyproxy.yaml  gateway-crd.yaml  gateway-deployment.yaml  gateway-helper.yaml  gateway-mcpserver.yaml  gateway-namespaces.yaml  gateway-waypoint.yaml  gateway.yaml  global-environments.yaml  helm-values.yaml  http-gateway.yaml  keycloak-route.yaml  keycloak.yaml  mcp-gateway-httproute.yaml  mcp-gateway.yaml  mcp-inspector.yaml  phoenix.yaml  registry.yaml  spiffe-helper-config.yaml  spiffe_helper_config.yaml  spire-helm-values.yaml  spire-oidc-route.yaml  spire-route.yaml  spire-tornjak-api-route.yaml  spire-tornjak-ui-route.yaml  ui-oauth-secret.yaml  wasm-filter.yaml
kagenti/installer/app/resources/ocp/: cert-manager-operator.yaml  istio-cni.yaml  istio.yaml  keycloak-operator.yaml  keycloak-postgres.yaml  keycloak.yaml  kiali-config.yaml  kiali-operator.yaml  mcp-inspector-route.yaml  mcp-proxy-route.yaml  openshift-pipelines-operator.yaml  phoenix-route.yaml  servicemeshoperator3.yaml  spire-helm-values.yaml  ui-route.yaml  ztunnel.yaml
kagenti/installer/src/: .env_template  installer.py  keycloak.py
kagenti/installer/src/resources/: environments.yaml  gateway-nodeport.yaml  otel-collector.yaml  phoenix.yaml
kagenti/installer/src/resources/routes/: acp-weather-service.yaml
kagenti/kinst/: README.md  pyproject.toml
kagenti/kinst/docs/samples/: installables.yaml  values.yaml
kagenti/kinst/docs/schema/: installables.schema.json
kagenti/kinst/src/kagenti/kinst/: __init__.py  cli.py  progress.py
kagenti/kinst/tests/: test_env_subst.py  test_fetch_relative.py  test_helm_registry_login.py  test_kubectl_label.py  test_ordering.py  test_progress.py  test_progress_integration.py  test_repo_credentials.py  test_task.py  test_wait_flag.py
kagenti/ui/: Dockerfile  Home.py  README.md  pyproject.toml
kagenti/ui/lib/: a2a_utils.py  acp_utils.py  agent_details_page.py  build_utils.py  common_ui.py  constants.py  kube.py  logging_config.py  mcp_client.py  tool_details_page.py  utils.py
kagenti/ui/pages/: 01_Agent_Catalog.py  02_Tool_Catalog.py  03_Observability.py  04_Import_New_Agent.py  05_Import_New_Tool.py  06_Admin.py
kagenti/ui/scripts/: ui-dev-build.1.sh  ui-dev-build.2.sh  ui-dev-build.sh
kagenti/ui/tests/: conftest.py  test_a2a_utils.py  test_env_parser.py  test_integration_resource_body.py
(+1033 files in other folders)
