[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kagenti-project"
version = "0.1.0"
description = "Monorepo for Kagenti code and Ansible deployments"
requires-python = ">=3.10"

# List ALL required Python packages for both Ansible and the Kagenti code
dependencies = [
    # Ansible dependencies
    "ansible-core",
    "ansible",

    # Dependencies Ansible collections or Python code
    "kubernetes>=34",
    "PyYAML>=6.0.3",
]

[project.optional-dependencies]
test = [
    # Testing framework
    "pytest>=7.4.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",  # For parallel test execution
    "pytest-asyncio>=0.21.0",  # For async test support

    # Kubernetes client
    "kubernetes>=34",
    "urllib3>=2.6.3",  # Minimum version for CVE-2025-66418, CVE-2025-66471, CVE-2026-21441 fixes

    # HTTP requests
    "requests>=2.31.0",
    "httpx>=0.24.0",  # For A2A client

    # A2A protocol client
    "a2a-sdk>=0.2.5",

    # Keycloak client
    "python-keycloak>=3.7.0",

    # JSON Web Token handling
    "PyJWT>=2.8.0",
]

[tool.setuptools]
# Explicitly include only the kagenti package, exclude charts and deployments
packages = ["kagenti"]

[tool.setuptools.package-data]
kagenti = ["**/*"]
