[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kagenti-installer"
version = "0.2.0"
description = "A CLI tool to install the Agent Platform and its dependencies on a local Kind cluster."
authors = [
    { name = "kagenti", email = "kagenti@kagenti.io" },
]
requires-python = ">=3.9"

dependencies = [
    "rich>=13.0.0,<=14.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "kubernetes>=29.0.0,<30.0.0",
    "docker>=7.0.0,<8.0.0",
    "typer[all]>=0.16.0",
    "packaging>=23.0,<25.0",
    "python-keycloak>=5.5.1",
]

[project.scripts]
kagenti-installer = "src.installer:app"

[tool.setuptools]
packages = ["src"]