[project]
name = "kagenti-dashboard"
version = "0.1.0"
description = "A Streamlit-based UI for kagenti"
authors = [
    { name = "kagenti", email = "maintainers@kagenti.dev" }
]
dependencies = [
    "streamlit>=1.45.1",
    "streamlit-oauth>=0.1.14",
    "streamlit-mermaid>=0.3.0",
    "kubernetes>=32.0.1",
    "a2a-sdk>=0.2.5",
    "python-keycloak>=5.5.1",
    "mcp[cli]>=1.3.0",
    "pyjwt>=2.10.1",
]
requires-python = ">=3.11" # Minimum Python version required

[build-system]
requires = ["setuptools>=80.8"]
build-backend = "setuptools.build_meta"

[tool.uv]
# UV specific configurations can go here if needed,

# --- Setuptools configuration ---
[tool.setuptools]
packages = ["lib"]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.22",
]

[tool.pytest.ini_options]
# Use function-scoped event loop for pytest-asyncio fixtures to avoid deprecation warnings
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

