[project]
name = "beeai-framework-chat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11, <4.0"
dependencies = [
    "acp-sdk>=0.8.4",
    "beeai-framework[duckduckgo,wikipedia]>=0.1.17",
    "pydantic-settings>=2.9.0",
    "asyncclick>=8.1.8",
]

#[tool.uv.sources]
#a2a-samples = { git = "https://github.com/google/A2A.git", subdirectory = "samples/python" }
#acp-sdk = { workspace = true }
